flex/flex-tests/testData/js2_highlighting/MoreThanOneTopLevelSymbolDeclared.js2
package {
  class <error descr="More than one externally visible symbol defined in file">MoreThanOneTopLevelSymbolDeclared</error> {}
  class <error descr="More than one externally visible symbol defined in file">MoreThanOneTopLevelSymbolDeclared</error> {}
}